GTK4-Konverter_Alpha/header/gtk/gtktreeview.pp


procedure gtk_tree_view_set_search_entry(tree_view:PGtkTreeView; entry:PGtkEditable);cdecl;external;


procedure gtk_tree_view_convert_widget_to_tree_coords(tree_view:PGtkTreeView; wx:longint; wy:longint; tx:Plongint; ty:Plongint);cdecl;external;

procedure gtk_tree_view_convert_tree_to_widget_coords(tree_view:PGtkTreeView; tx:longint; ty:longint; wx:Plongint; wy:Plongint);cdecl;external;

procedure gtk_tree_view_convert_widget_to_bin_window_coords(tree_view:PGtkTreeView; wx:longint; wy:longint; bx:Plongint; by:Plongint);cdecl;external;

procedure gtk_tree_view_convert_bin_window_to_widget_coords(tree_view:PGtkTreeView; bx:longint; by:longint; wx:Plongint; wy:Plongint);cdecl;external;

procedure gtk_tree_view_convert_tree_to_bin_window_coords(tree_view:PGtkTreeView; tx:longint; ty:longint; bx:Plongint; by:Plongint);cdecl;external;

procedure gtk_tree_view_convert_bin_window_to_tree_coords(tree_view:PGtkTreeView; bx:longint; by:longint; tx:Plongint; ty:Plongint);cdecl;external;

procedure gtk_tree_view_set_fixed_height_mode(tree_view:PGtkTreeView; enable:Tgboolean);cdecl;external;

function gtk_tree_view_get_fixed_height_mode(tree_view:PGtkTreeView):Tgboolean;cdecl;external;

procedure gtk_tree_view_set_hover_selection(tree_view:PGtkTreeView; hover:Tgboolean);cdecl;external;

function gtk_tree_view_get_hover_selection(tree_view:PGtkTreeView):Tgboolean;cdecl;external;

procedure gtk_tree_view_set_hover_expand(tree_view:PGtkTreeView; expand:Tgboolean);cdecl;external;

function gtk_tree_view_get_hover_expand(tree_view:PGtkTreeView):Tgboolean;cdecl;external;

procedure gtk_tree_view_set_rubber_banding(tree_view:PGtkTreeView; enable:Tgboolean);cdecl;external;

function gtk_tree_view_get_rubber_banding(tree_view:PGtkTreeView):Tgboolean;cdecl;external;

function gtk_tree_view_is_rubber_banding_active(tree_view:PGtkTreeView):Tgboolean;cdecl;external;

function gtk_tree_view_get_row_separator_func(tree_view:PGtkTreeView):TGtkTreeViewRowSeparatorFunc;cdecl;external;

procedure gtk_tree_view_set_row_separator_func(tree_view:PGtkTreeView; func:TGtkTreeViewRowSeparatorFunc; data:Tgpointer; destroy:TGDestroyNotify);cdecl;external;

function gtk_tree_view_get_grid_lines(tree_view:PGtkTreeView):TGtkTreeViewGridLines;cdecl;external;

procedure gtk_tree_view_set_grid_lines(tree_view:PGtkTreeView; grid_lines:TGtkTreeViewGridLines);cdecl;external;

function gtk_tree_view_get_enable_tree_lines(tree_view:PGtkTreeView):Tgboolean;cdecl;external;

procedure gtk_tree_view_set_enable_tree_lines(tree_view:PGtkTreeView; enabled:Tgboolean);cdecl;external;

procedure gtk_tree_view_set_show_expanders(tree_view:PGtkTreeView; enabled:Tgboolean);cdecl;external;

function gtk_tree_view_get_show_expanders(tree_view:PGtkTreeView):Tgboolean;cdecl;external;

procedure gtk_tree_view_set_level_indentation(tree_view:PGtkTreeView; indentation:longint);cdecl;external;

function gtk_tree_view_get_level_indentation(tree_view:PGtkTreeView):longint;cdecl;external;


procedure gtk_tree_view_set_tooltip_row(tree_view:PGtkTreeView; tooltip:PGtkTooltip; path:PGtkTreePath);cdecl;external;

procedure gtk_tree_view_set_tooltip_cell(tree_view:PGtkTreeView; tooltip:PGtkTooltip; path:PGtkTreePath; column:PGtkTreeViewColumn; cell:PGtkCellRenderer);cdecl;external;

function gtk_tree_view_get_tooltip_context(tree_view:PGtkTreeView; x:longint; y:longint; keyboard_tip:Tgboolean; model:PPGtkTreeModel; 
           path:PPGtkTreePath; iter:PGtkTreeIter):Tgboolean;cdecl;external;

procedure gtk_tree_view_set_tooltip_column(tree_view:PGtkTreeView; column:longint);cdecl;external;

function gtk_tree_view_get_tooltip_column(tree_view:PGtkTreeView):longint;cdecl;external;

{$endif}


implementation

function GTK_TYPE_TREE_VIEW : longint; { return type might be wrong }
  begin
    GTK_TYPE_TREE_VIEW:=gtk_tree_view_get_type;
  end;

function GTK_TREE_VIEW(obj : longint) : longint;
begin
  GTK_TREE_VIEW:=G_TYPE_CHECK_INSTANCE_CAST(obj,GTK_TYPE_TREE_VIEW,GtkTreeView);
end;

function GTK_IS_TREE_VIEW(obj : longint) : longint;
begin
  GTK_IS_TREE_VIEW:=G_TYPE_CHECK_INSTANCE_TYPE(obj,GTK_TYPE_TREE_VIEW);
end;

function GTK_TREE_VIEW_CLASS(klass : longint) : longint;
begin
  GTK_TREE_VIEW_CLASS:=G_TYPE_CHECK_CLASS_CAST(klass,GTK_TYPE_TREE_VIEW,GtkTreeViewClass);
end;

function GTK_IS_TREE_VIEW_CLASS(klass : longint) : longint;
begin
  GTK_IS_TREE_VIEW_CLASS:=G_TYPE_CHECK_CLASS_TYPE(klass,GTK_TYPE_TREE_VIEW);
end;

function GTK_TREE_VIEW_GET_CLASS(obj : longint) : longint;
begin
  GTK_TREE_VIEW_GET_CLASS:=G_TYPE_INSTANCE_GET_CLASS(obj,GTK_TYPE_TREE_VIEW,GtkTreeViewClass);
end;


end.
